--- a/src/Store.UI/Store.UI.csproj
+++ b/src/Store.UI/Store.UI.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Store.Application\Store.Application.csproj" />
+  </ItemGroup>
+
 </Project>
