--- a/src/Store.UI/appsettings.json
+++ b/src/Store.UI/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DefaultConnection": "Server=.;Database=playground_store;Trusted_Connection=True;MultipleActiveResultSets=true;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
