setup db added initial migration script

--- a/src/Store.UI/appsettings.json
+++ b/src/Store.UI/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "DefaultConnection": "Server=.;Database=playground_store;Trusted_Connection=True;MultipleActiveResultSets=true;",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=playground_store;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
